--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Joyeux Anniversaire !</title>
+  <title>Joyeux Anniversaire Binoush!</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -13,8 +13,13 @@
   <p>Je t’aime énormément et j’ai hâte de célébrer avec toi !</p>
   <button onclick="afficherSurprise()">Clique ici pour une surprise 🎁</button>
   <div class="surprise" id="surprise">
-    <img src="coeur.png" alt="Cœur d'amour">
-    <p>Tu es la plus belle chose qui me soit arrivée ! ❤️</p>
+    <img src="https://cdn-icons-png.flaticon.com/512/1077/1077035.png" alt="Cœur d'amour" width="100">
+
+    <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Heart_corazón.svg" alt="Cœur d'amour" width="100">
+-->
+    <p>Tu es la plus belle chose qui me soit arrivée ! ❤️ C'est ton jour mais boul fouy BAE <br/>
+    Nala yobou resto haha
+    </p>
   </div>
 </div>
 <script src="script.js"></script>
