--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <!-- <img src="https://upload.wikimedia.org/wikipedia/commons/f/f1/Heart_corazón.svg" alt="Cœur d'amour" width="100">
 -->
-    <p>Tu es la plus belle chose qui me soit arrivée ! ❤️ C'est ton jour mais boul fouy BAE <br/>
+    <p>Tu es la plus belle chose qui me soit arrivée ! ❤️ C'est ton jour mais boul fouy <span class="bae">BAE</span> <br/>
     Nala yobou resto haha
     </p>
   </div>
